// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component test render navbar without crashing 1`] = `
<div>
  <header>
    <div
      className="wrapper"
    >
      <div
        id="logo"
      >
        <Link
          className="logo"
          replace={false}
          to="/"
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </Link>
        <h1
          className="logo"
        >
          <Link
            className="sendIT"
            replace={false}
            to="/"
          >
            SendIT
          </Link>
        </h1>
      </div>
      <nav>
        <ul
          className="navigation "
        >
          <li>
            <Link
              className="navigation-link"
              replace={false}
              to="/admin-profile"
            >
              My Profile
            </Link>
          </li>
          <li>
            <Link
              className="navigation-link"
              onClick={[Function]}
              replace={false}
              to="/"
            >
              Logout
            </Link>
          </li>
        </ul>
      </nav>
      <div
        className="navbar__header"
      >
        <div
          className="navbar__btn "
          onClick={[Function]}
        >
          <div
            className="bar bar1"
          />
          <div
            className="bar bar2"
          />
          <div
            className="bar bar3"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`NavBar Component test should redirect when role is user role is admin 1`] = `
<div>
  <header>
    <div
      className="wrapper"
    >
      <div
        id="logo"
      >
        <Link
          className="logo"
          replace={false}
          to="/"
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </Link>
        <h1
          className="logo"
        >
          <Link
            className="sendIT"
            replace={false}
            to="/"
          >
            SendIT
          </Link>
        </h1>
      </div>
      <nav>
        <ul
          className="navigation "
        >
          <li>
            <Link
              className="navigation-link"
              replace={false}
              to="/login"
            >
              Login
            </Link>
          </li>
          <li>
            <Link
              className="navigation-link"
              replace={false}
              to="/register"
            >
              SignUp
            </Link>
          </li>
        </ul>
      </nav>
      <div
        className="navbar__header"
      >
        <div
          className="navbar__btn "
          onClick={[Function]}
        >
          <div
            className="bar bar1"
          />
          <div
            className="bar bar2"
          />
          <div
            className="bar bar3"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;
